# prost-arrow

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: Cargo.toml  build.rs
examples/proto/routeguide/: route_guide.proto
examples/src/routeguide/: routeguide.rs
prost-arrow/: Cargo.toml
prost-arrow-derive/: Cargo.toml
prost-arrow-derive/src/: lib.rs
prost-arrow/src/: binary.rs  lib.rs  lists.rs  primitives.rs  traits.rs
