[workspace]
members = [
    "examples",
    "prost-arrow",
    "prost-arrow-derive",
]
resolver = "2"

[workspace.dependencies]
arrow = { version = "50.0.0" }
arrow-array = { version = "50.0.0" }
arrow-buffer = { version = "50.0.0" }
arrow-schema = { version = "50.0.0" }
prost = { version = "0.12" }
prost-build = { version = "0.12" }
