[package]
authors = [ "Matt Forbes <matt.r.forbes@gmail.com>" ]
description = """
Provides the proc-macro for prost-arrow that can derive the ToArrow trait
on prost-generated messages.
"""
edition = "2021"
keywords = ["rpc", "grpc", "protobuf", "prost", "arrow"]
license = "Apache-2.0"
name = "prost-arrow-derive"
readme = "../README.md"
repository = "https://github.com/emef/prost-arrow"
version = "0.0.3"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
